# cmake-example-program

a/: CMakeLists.txt  foo.c  foo.h
b/: CMakeLists.txt  bar.c
